force-app/main/default/objects/SuRF_POS_Trans__c/SuRF_POS_Trans__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community : NPN Compliance :</description>
    <label>SuRF-POS Trans</label>
    <nameField>
        <displayFormat>SuRF-POS-{00000}</displayFormat>
        <label>SuRF-POS Trans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuRF-POS Trans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>