force-app/main/default/objects/SuRF_POS_Trans__c/fields/Partner_POS_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Partner_POS_Revenue__c</fullName>
    <label>Partner POS Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>